--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@
   font-family: "Atkinson Hyperlegible Next", serif;
   font-optical-sizing: auto;
   font-weight: 400;
-  font-style: normal;
+  font-style: hidden;
 }
 
 body {
@@ -27,7 +27,15 @@ fixed repeating-linear-gradient(rgba(193, 193, 193, 0.25), rgb(193, 193, 193, 0.
 fixed repeating-linear-gradient(0.25turn ,rgb(193, 193, 193, 0.25), rgb(193, 193, 193, 0.25) 1px, transparent 1px, transparent 40px), black;
 width: 100dvw;
 height: 100dvh;
-overflow: hidden;
+overflow: auto;
+}
+
+.active {
+	text-decoration: underline white;
+}
+
+.active:hover {
+	cursor: default;
 }
 
 a {
@@ -52,11 +60,12 @@ ul {
 
 li {
 padding: 1em 2em;
-font-size: clamp(0.8em, 1.5vw, 3em);
+font-size: clamp(0.8em, 1.2vw, 2em);
 }
 
-li:hover {
-	scale: 1.1;
+li:hover:not(.active){
+	transform: scale(1.1);
+	transition: 0.5s ease-in-out;
 }
 
 li:nth-child(1) {
@@ -83,7 +92,7 @@ main {
 
 #time {
 	font-size: clamp(3em ,15vw, 25em );
-	text-shadow: 3px 3px 1px yellow, 2px 5px 1px rgb(255, 0, 0), 5px 2px 1px rgb(0, 89, 255);
+	text-shadow: 4px 4px 1px yellow, 2px 7px 1px rgb(255, 0, 0), 7px 2px 1px rgb(0, 89, 255);
 }
 
 #countdown p{
@@ -108,7 +117,7 @@ footer p {
 /*-------- ABOUT ME --------*/
 
 #aboutme {
-	width: 50%;
+	width: 50vw;
 	border: 2px solid black;
 	border-top-left-radius: 10%;
 	border-bottom-right-radius: 10%;
@@ -122,7 +131,7 @@ footer p {
 #aboutme p {
 	font-size: clamp(1em, 1.5vw, 2.5em);
 	line-height: 1.8;
-	padding: min(2em, 4%);
+	padding: min(3em, 5%);
 	color: black;
 
 }
@@ -146,12 +155,12 @@ footer p {
 
 @media only screen and (max-width:1024px) {
 	#aboutme {
-		width: 60%;
+		width: 60dvw;
 	}
 }
-	@media only screen and (max-width:1024px) {
+	@media only screen and (max-width:768px) {
 		#aboutme {
-			width: 80%;
+			width: 80dvw;
 		}
 }
 
@@ -163,7 +172,7 @@ footer p {
 	display:flex;
 	justify-content: center;
 	align-items: center;
-	gap: 1.25rem;
+	gap: 1.5rem;
 	z-index: 5;
 }
  
@@ -181,7 +190,8 @@ footer p {
 }
 
 .icon:hover {
-	scale: 1.1;
+	transform: scale(1.1);
+	transition: 0.25s ease-in-out;
 }
 
 .icon:nth-child(-n+3) img {
